lang/interpret_test/TestAstFunc2/printfunificationerr0.txtar
-- main.mcl --
import "fmt"
test fmt.printf("%d%d", 42) {} # should not pass, missing second int
-- OUTPUT --
# err: errUnify: type unification error here: in /main.mcl @2:1-2:30
--
test fmt.printf("%d%d", 42) {} # should not pass, missing second int
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

ERROR: type error: str != list
